--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nativescript-theme-core": "~1.0.4",
     "reflect-metadata": "~0.1.12",
     "rxjs": "~6.3.0",
+    "rxjs-compat": "^6.5.1",
     "tns-core-modules": "~5.3.0",
     "zone.js": "~0.8.26"
   },
