Updating application ID

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "nativescript": {
-    "id": "org.nativescript.taskmanagermobileapp",
+    "id": "com.santive.taskmanagersantive",
     "tns-android": {
       "version": "5.3.1"
     },
