--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "nativescript": {
     "id": "com.santive.taskmanagersantive",
-    "tns-android": {
-      "version": "5.3.1"
-    },
     "tns-ios": {
       "version": "5.3.1"
+    },
+    "tns-android": {
+      "version": "5.4.0"
     }
   },
   "description": "NativeScript Application",
@@ -21,21 +21,22 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
-    "nativescript-angular": "~7.2.0",
+    "nativescript-angular": "^7.2.4",
     "nativescript-social-share": "^1.5.1",
     "nativescript-theme-core": "~1.0.4",
     "reflect-metadata": "~0.1.12",
-    "rxjs": "~6.3.0",
+    "rxjs": "^6.3.3",
     "rxjs-compat": "^6.5.1",
-    "tns-core-modules": "~5.3.0",
-    "zone.js": "~0.8.26"
+    "tns-core-modules": "^5.4.0",
+    "zone.js": "^0.8.4",
+    "typescript": "~3.1.1"
   },
   "devDependencies": {
     "@angular/compiler-cli": "~7.2.0",
     "@nativescript/schematics": "~0.5.0",
     "@ngtools/webpack": "~7.2.0",
-    "nativescript-dev-typescript": "~0.9.0",
-    "nativescript-dev-webpack": "~0.21.0"
+    "nativescript-dev-typescript": "^0.9.0",
+    "nativescript-dev-webpack": "^0.22.0"
   },
   "gitHead": "803cec054c44c99eaa59cdc267993e6346f6cb3a",
   "readme": "NativeScript Application"
